# RenderEngine

./: .gitignore  CMakeLists+xmlc.txt  CMakeLists.txt  README.md  RenderEngine.cpp  RenderEngine.cxx  RenderEngine.sln  RenderEngine.vcxproj  RenderEngine.vcxproj.filters
Models/: crash_normal.mesh  crash_normal.mtl  light.mesh  monkey.mesh  monkey_hd.mesh  monkey_normal.mesh  plane.mesh  quad.mesh  quad.mtl  scene5.mtl  scene74.mesh  scene74.mtl  scene75.mtl  spot.mesh  sun.mesh  test_color_quad.mesh  test_color_quad.mtl
Models/gltf/: CubeGLTF.gltf  scene76.gltf
VS22/: RenderEngine.sln  RenderEngine.vcxproj  VS22.sln  main.cpp
VS22/Engine/: Engine.vcxproj  Engine.vcxproj.filters
VS22/Game/: Game.vcxproj  RenderEngine.sln  main_game.cpp
VS22/Game/Game/: Game.vcxproj  Game.vcxproj.filters  main_game.cpp
cmake_tools/: consts.cmake
engine/: CMakeLists.txt  test.cxx  test.hxx
engine/include/engine/: application.hxx  defines.hxx  defines.hxx.in  test_cmake.hxx
engine/include/engine/adapters/: glfw_adapter.h
engine/include/engine/graphics/: render.hxx  renderAPI.hxx
engine/include/engine/graphics/backends/metal/: renderAPIMetal.hxx
engine/include/engine/graphics/backends/vulkan/: renderAPIVulkan.hxx  vulkanPhysicalDevice.hxx  vulkanQueue.hxx  vulkanUtils.hxx
engine/include/engine/window/: window.hxx
engine/include/engine/window/backends/glfw/: glfwWindow.hxx
engine/source/: main.cpp
engine/source/engine/: application.cxx  test_cmake.cxx
engine/source/engine/adapters/: glfw_adapter.mm
engine/source/engine/graphics/: render.cxx  renderAPI.cxx
engine/source/engine/graphics/backends/metal/: renderAPIMetal.cxx
engine/source/engine/graphics/backends/vulkan/: renderAPIVulkan.cxx  vulkanPhysicalDevice.cxx  vulkanQueue.cxx  vulkanUtils.cxx
engine/source/engine/window/: window.cxx
engine/source/engine/window/backends/glfw/: glfwWindow.cxx
experiments/engine/: test.cpp  test.hpp
experiments/solutions/MacOS/MacOS.xcodeproj/xcuserdata/captain.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
experiments/solutions/macOS/MacOS/: AppDelegate.h  AppDelegate.m  Renderer.cpp  Renderer.hpp  RendererAdapter.h  RendererAdapter.mm  ViewController.h  ViewController.mm  main.m
experiments/solutions/macOS/MacOS.xcodeproj/: project.pbxproj
experiments/solutions/macOS/MacOS.xcodeproj/project.xcworkspace/xcuserdata/captain.xcuserdatad/: UserInterfaceState.xcuserstate
experiments/solutions/macOS/MacOS.xcodeproj/xcuserdata/captain.xcuserdatad/xcschemes/: xcschememanagement.plist
experiments/solutions/macOS/MacOS/Base.lproj/: Main.storyboard
experiments/solutions/win/: Experiment.sln
experiments/solutions/win/engine/: engine.cpp  engine.vcxproj  engine.vcxproj.filters  framework.h
experiments/solutions/win/project/: project.vcxproj  project.vcxproj.filters
include/: application.hxx  camera.hxx  debugCamera.hxx  ebo.hxx  engine.hxx  fileSystem.hxx  forwardBasePass.hxx  fragmentShader.hxx  frameBuffer.hxx  gameObject.hxx  graphicsDevice.h  input.hxx  lightComponent.hxx  material.hxx  math.hxx  mesh.hxx  meshLoader.hxx  meshVAO.hxx  mobileSSAOPass.hxx  openGLGraphicsDevice.h  passProgramm.hxx  pointLightComponent.hxx  pointLightGameObject.hxx  pointLightShadow.hxx  render.hxx  renderEngine.hxx  renderGUI.hxx  renderInfo.hxx  renderPass.hxx  renderer.hxx  scene.hxx  sceneManager.hxx  sceneRenderer.hxx  screenRenderPass.hxx  shaderLoader.hxx  spotLight.hxx  spotLightShadow.hxx  sunLight.hxx  testGameObject.hxx  testScene.hxx  (+6 more)
include/gameObjects/: tileMap.hxx
include/gameObjects/cameras/: camera2D.hxx
include/graphics/: textureLoader.hxx  vertices.hxx
include/graphics/renderers/: tileMapRenderer.hxx
include/scenes/: scene2D.hxx
resources/TiledMaps/: TiledProject.tiled-session  demo.tmj  demo.tmx  demo_map.tmx  test_level_tilemap.tsx
scripts/: cmake_creator.bat  cmake_creator.command  generate_editor_macOS.command  generate_editor_win64.bat  howBuildEmscripten.txt  makeVisualStudio2019Solution.bat
shaders/OpenGL/: AOBlurPass.frag  AOBlurPass.vert  HSIAOPass.frag  HSIAOPass.vert  default.frag  default.vert  depthPrePass.frag  depthPrePass.vert  forwardBasePass.frag  forwardBasePass.vert  fullScreen.frag  light.frag  light.vert  mesh.frag  mesh.vert  meshBound.frag  meshBound.vert  pointLightShadow.frag  pointLightShadow.vert  sunLightShadow.frag  sunLightShadow.vert  tileMap.frag  tileMap.vert
shaders/WebGL/: AOBlurPass.frag  HSIAOPass.frag  HSIAOPass.vert  depthPrePass.frag  depthPrePass.vert  forwardBasePass.frag  fullScreen.frag  fullScreen.vert  light.frag  light.vert  mesh.frag  mesh.vert  meshBound.frag  meshBound.vert  pointLightShadow.frag  pointLightShadow.vert  sunLightShadow.frag  sunLightShadow.vert  tileMap.frag  tileMap.vert
source/: application.cxx  camera.cxx  debugCamera.cxx  depthMapFrameBuffer.cxx  ebo.cxx  engine.cxx  fileSystem.cxx  forwardBasePass.cxx  fragmentShader.cxx  frameBuffer.cxx  gameObject.cxx  graphicsDevice.cpp  input.cxx  lightComponent.cxx  main.cxx  material.cxx  math.cxx  mesh.cxx  meshLoader.cxx  meshVAO.cxx  mobileSSAOPass.cxx  openGLGraphicsDevice.cpp  passProgramm.cxx  pointLightComponent.cxx  pointLightGameObject.cxx  pointLightShadow.cxx  render.cxx  renderEngine.cxx  renderGUI.cxx  renderInfo.cxx  renderPass.cxx  renderer.cxx  scene.cxx  sceneManager.cxx  sceneRenderer.cxx  screenRenderPass.cxx  shaderLoader.cxx  spotLight.cxx  spotLightShadow.cxx  sunLight.cxx  (+7 more)
source/gameObjects/: tileMap.cxx
source/gameObjects/cameras/: camera2D.cxx
source/graphics/: textureLoader.cxx
source/graphics/backends/opengl/: openglDevice.cxx
source/graphics/renderers/: tileMapRenderer.cxx
source/scenes/: scene2D.cxx
tests/: application_test.cxx
tiled/: Test.tiled-session  test.tmx  test_level_tilemap.tmx  test_level_tilemap.tsx  test_level_tilemap_64.tsx  tilemap_packed.tsx
